# basketball_reference_scraper

./: .env  basketball_reference_scraper.py  basketball_scrape.py  pyproject.toml  scrape.py
libs/: scraper_utils.py
libs/basketball_reference_scraper/: players.py  teams.py
